Fix some typos and change use some new Java features